Setup basic server code

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -37,6 +37,11 @@
     </div> -->
 
   </div>
+
+  <div class="register-login-chooser">
+    <h6>Don't have an account? <a href="/register">Register</a></h6>
+  </div>
+
 </div>
 
 <%- include('partials/footer') %>
