--- a/views/register.ejs
+++ b/views/register.ejs
@@ -36,6 +36,11 @@
     </div> -->
 
   </div>
+
+  <div class="register-login-chooser">
+    <h6>Have an account? <a href="/login">Log In</a></h6>
+  </div>
+
 </div>
 
 <%- include('partials/header') %>
